kotlin-ide/idea/testData/multiplatform/weaklyIncompatibleActualInIntermediateModule/middle/middle.kt
package sample

actual class <!NO_ACTUAL_CLASS_MEMBER_FOR_EXPECTED_CLASS("A", "      public final expect fun f(): Unit ")!>A<!> {
}